src/test/ui/const-generics/issues/issue-61336.full.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-61336.rs:2:27
   |
LL | #![cfg_attr(full, feature(const_generics))]
   |                           ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/issue-61336.rs:9:5
   |
LL |     [x; N]
   |     ^^^^^^ the trait `Copy` is not implemented for `T`
   |
   = note: the `Copy` trait is required because the repeated element will be copied
help: consider restricting type parameter `T`
   |
LL | fn g<T: Copy, const N: usize>(x: T) -> [T; N] {
   |       ^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
